# Proyecto_3

./: readme.md
.STORAGE/5.repoMove/: index  main.cpp  readme.md
.STORAGE/6.chee/: .guitignore
.STORAGE/9.yayo/: hola.txt
GuitClient/: CMakeLists.txt  conandata.yml  main.cpp
GuitClient/Commands/: AddCommand.cpp  AddCommand.h  Command.cpp  Command.h  InitCommand.cpp  InitCommand.h  guitCommit.cpp  guitCommit.h  guitHelp.cpp  guitHelp.h  guitReset.cpp  guitReset.h  guitRollBack.cpp  guitRollBack.h  guitStatus.cpp  guitStatus.h  lsCommand.cpp  lsCommand.h
GuitClient/Data_Structures/: FileStatus.cpp  FileStatus.h  listaEnlazada.cpp  listaEnlazada.h
GuitClient/Managers/: DirectoryManager.cpp  DirectoryManager.h  NetworkManager.cpp  NetworkManager.h
guitServerApi/: .gitignore  Startup.cs  guitApiServer.csproj  guitApiServer.http  guitApiServer.sln  prubaup.json
guitServerApi/Controllers/: CommitsController.cs  FileComparer.cs  FileDeltasController.cs  FilesController.cs  RepositoriesController.cs
guitServerApi/Data/: VersionControlContext.cs  adios.py
guitServerApi/Models/: AddFilesRequest.cs  CreateRepositoryRequest.cs  Repository.cs
guitServerApi/Properties/: launchSettings.json
guitServerApi/STORAGE/base01/: flutter.bat
guitServerApi/STORAGE/reporemote/: docu.txt  hola.py
